[package]
name = "workflow"
version = "0.1.0"
authors = ["becker <github@deathbyescalator.com>"]
edition = "2018"

[dependencies]
dirs = "1"
toml = "*"
notify-rust = "3"
regex = "1"
failure = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "^0.9.0"
prettytable-rs = "0.7.0"
structopt = "0.2.10"
dotenv = "0.13.0"
envy = "0.3.2"
log = "0.4.3"
env_logger = "0.5.10"
